cabal-version:      3.4
name:               stm-ringbuffer
version:            0.1.0.0
license:            BSD-3-Clause
author:             Greg Baimetov
maintainer:         Greg Baimetov
description:
  This package provides a ring buffer in STM and a wrapper which mimics the interface to TBQueue.

copyright:          (c) Greg Baimetov

build-type:         Simple

extra-doc-files:    CHANGELOG.md
                  , README.md
common warnings
    ghc-options: -Wall

library
  hs-source-dirs:  src

  default-extensions: ImportQualifiedPost
  exposed-modules:    Control.Concurrent.STM.TRingBuffer
                    , Control.Concurrent.STM.TRingBuffer.TBQueue
  build-depends:      array >= 0.5.8 && < 0.6,
                      base >= 4.18.3 && < 4.19,
                      dlist >= 1.0 && < 1.1,
                      stm >= 2.5.3 && < 2.6,

  ghc-options:        -Wall

test-suite test
    type: exitcode-stdio-1.0
    default-extensions: ImportQualifiedPost

    hs-source-dirs:      test
    main-is:             Main.hs
    other-modules:       TestTRingBuffer
                       , ReferenceTest
    build-depends:
                      base >= 4.18.3 && < 4.19,
                      QuickCheck >= 2.16.0 && < 2.17,
                      containers >= 0.6.7 && < 0.7,
                      deepseq >= 1.4.8 && < 1.5,
                      random >= 1.3.1 && < 1.4,
                      async >= 2.2.6 && < 2.3,
                      criterion >= 1.6.5 && < 1.7,
                      tasty >= 1.5.4 && < 1.6,
                      generic-random >= 1.5.0 && < 1.6,
                      hspec >= 2.11.17 && < 2.12,
                      stm >= 2.5.3 && < 2.6,
                      tasty-bench >= 0.5 && < 0.6,
                      stm-ringbuffer


benchmark benchmark
    type: exitcode-stdio-1.0
    default-extensions: ImportQualifiedPost
    hs-source-dirs:      benchmark

    main-is:             Main.hs

    other-modules:       StmBench

    build-depends:
                      base >= 4.18.3 && < 4.19,
                      QuickCheck >= 2.16.0 && < 2.17,
                      containers >= 0.6.7 && < 0.7,
                      deepseq >= 1.4.8 && < 1.5,
                      random >= 1.3.1 && < 1.4,
                      async >= 2.2.6 && < 2.3,
                      criterion >= 1.6.5 && < 1.7,
                      tasty >= 1.5.4 && < 1.6,
                      generic-random >= 1.5.0 && < 1.6,
                      hspec >= 2.11.17 && < 2.12,
                      stm >= 2.5.3 && < 2.6,
                      tasty-bench >= 0.5 && < 0.6,
                      stm-ringbuffer
